@@ -8,7 +8,7 @@ members = [
 resolver = "2"
 
 [workspace.package]
-version = "0.1.8"
+version = "0.1.9"
 edition = "2021"
 authors = ["Glenn Gore <glenn@affinidi.com>"]
 description = "Affinidi DID Resolver"
@@ -47,7 +47,7 @@ tower-http = { version = "0.5", features = ["cors", "trace"] }
 
 # Cache Client (SDK)
 futures-util = "0.3"
-tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
+tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
 rayon = "1.10"
 num-format = "0.4.4"
 clap = { version = "4.5", features = ["derive"] }
