@@ -2,6 +2,11 @@
 
 Only supports did:peer numalgo 0,2 (did:peer:0, did:peer:2)
 
+NOTE:
+  serviceEndpoint.id should be an IRI (e.g. `#service`).
+  Due to a limitation of the SSI Crate Document type, we must use a URI.
+  Instead of `#service` we resolve to `did:peer:#service`
+
 ## Build a WebAssembly package
 
 **Prerequisite:** [wasm-pack](https://rustwasm.github.io/wasm-pack/installer/)
